# mydogchase

./: .env  Cargo.toml  Dockerfile  Rocket.toml  build.sh  config.toml  docker-compose.yml  notes.txt
src/: config.rs  constants.rs  generate.rs  main.rs  media.rs  routes.rs  utils.rs
src/solarized/: mod.rs
templates/home/: home.hbs  home.html
